--- a/public_html/page/client/game/battlefield/battlefield.css
+++ b/public_html/page/client/game/battlefield/battlefield.css
@@ -8,8 +8,10 @@
 
 .client\.game\.battlefield\.hand {
     display: flex;
-    flex: 2 0 auto;
+    flex: 2 0;
+    flex-flow: column nowrap;
     background-color: red;
+    overflow: auto;
 }
 
 .client\.game\.battlefield\.entry {
@@ -29,4 +31,29 @@
     display: flex;
     flex: 1 0 auto;
     background-color: red;
+}
+
+.client\.field\.hand {
+    position: relative;
+    width: 100%;
+    height: auto;
+}
+.client\.field\.hand img {
+    width: 100%;
+    height: 100%;
+}
+
+.client\.field\.hand .card_div\.att {
+    position: absolute;
+    bottom: 3%;
+    left: 15%;
+    font-size: 4vw;
+}
+
+
+.client\.field\.hand .card_div\.def {
+    position: absolute;
+    bottom: 3%;
+    right: 15%;
+    font-size: 4vw;
 }
