--- a/public_html/page/client/game/battlefield/battlefield.css
+++ b/public_html/page/client/game/battlefield/battlefield.css
@@ -2,8 +2,6 @@
     display: flex;
     flex-flow: row nowrap;
     background-color: blue;
-    width: 100%;
-    height: 100%;
 }
 
 .client\.game\.battlefield\.hand {
@@ -11,7 +9,8 @@
     flex: 2 0;
     flex-flow: column nowrap;
     background-color: red;
-    overflow: auto;
+    height: 97vh;
+    overflow-y: scroll;
 }
 
 .client\.game\.battlefield\.entry {
@@ -23,16 +22,42 @@
 
 .client\.game\.battlefield\.field  {
     display: flex;
-    flex: 1 0 auto;
+    flex: 1 0;
     background-color: black;
 }
 
 .client\.game\.battlefield\.info  {
     display: flex;
-    flex: 1 0 auto;
+    flex: 1 0;
+    flex-flow: column nowrap;
     background-color: red;
 }
 
+/* INFO */
+.client\.game\.battlefield\.info\.enemy {
+    display: flex;
+    flex: 1 0;
+    flex-flow: row nowrap;
+    justify-content: space-around;
+}
+
+.client\.game\.battlefield\.info\.party {
+    display: flex;
+    flex: 1 0;
+    flex-flow: column nowrap;
+    align-items: center;
+}
+
+.client\.game\.battlefield\.info\.user {
+    display: flex;
+    flex: 1 0;
+    flex-flow: row nowrap;
+    justify-content: space-around;
+    align-items: flex-end;
+}
+
+
+/*CARD HAND*/
 .client\.field\.hand {
     position: relative;
     width: 100%;
@@ -50,10 +75,37 @@
     font-size: 4vw;
 }
 
-
 .client\.field\.hand .card_div\.def {
     position: absolute;
     bottom: 3%;
     right: 15%;
     font-size: 4vw;
+}
+
+
+/*CARD BATTLEFIELD*/
+
+.client\.field\.battle {
+    position: relative;
+    width: auto;
+    height: 32vh;
+}
+.client\.field\.battle img {
+    width: 100%;
+    height: 100%;
+}
+
+.client\.field\.battle .card_div\.att {
+    position: absolute;
+    bottom: 3%;
+    left: 15%;
+    font-size: 4vh;
+}
+
+
+.client\.field\.battle .card_div\.def {
+    position: absolute;
+    bottom: 3%;
+    right: 15%;
+    font-size: 4vh;
 }
