debug card problem

--- a/public_html/page/client/game/battlefield/battlefield.css
+++ b/public_html/page/client/game/battlefield/battlefield.css
@@ -86,7 +86,7 @@
 /*CARD BATTLEFIELD*/
 
 .client\.field\.battle {
-    position: relative;
+    position: absolute;
     width: auto;
     height: 32vh;
 }
