--- a/public_html/page/client/game/battlefield/battlefield.css
+++ b/public_html/page/client/game/battlefield/battlefield.css
@@ -1,4 +1,9 @@
 .client\.game\.battlefield {
+    position: sticky;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
     display: flex;
     flex-flow: row nowrap;
     background-color: blue;
@@ -9,26 +14,30 @@
     flex: 2 0;
     flex-flow: column nowrap;
     background-color: red;
-    height: 97vh;
+    height: 100vh;
+    width: 20vw;
     overflow-y: scroll;
 }
 
 .client\.game\.battlefield\.entry {
     display: flex;
     flex-flow: column nowrap;
-    flex: 7 0 auto;
+    width: 80vw;
+    height: 100vh;
     background-color: violet;
 }
 
 .client\.game\.battlefield\.field  {
     display: flex;
-    flex: 1 0;
+    height: 33vh;
+    width: 80vw;
+    overflow-x: scroll;
     background-color: black;
 }
 
 .client\.game\.battlefield\.info  {
     display: flex;
-    flex: 1 0;
+    height: 34vh;
     flex-flow: column nowrap;
     background-color: red;
 }
@@ -86,26 +95,27 @@
 /*CARD BATTLEFIELD*/
 
 .client\.field\.battle {
-    position: absolute;
+    position: relative;
     width: auto;
     height: 32vh;
 }
 .client\.field\.battle img {
-    width: 100%;
-    height: 100%;
+    width: 95%;
+    height: 95%;
+    margin: 2.5%;
 }
 
 .client\.field\.battle .card_div\.att {
     position: absolute;
-    bottom: 3%;
-    left: 15%;
+    bottom: 5.5%;
+    left: 17.5%;
     font-size: 4vh;
 }
 
 
 .client\.field\.battle .card_div\.def {
     position: absolute;
-    bottom: 3%;
-    right: 15%;
+    bottom: 5.5%;
+    right: 17.5%;
     font-size: 4vh;
 }
