--- a/public_html/page/launcher/launcher.css
+++ b/public_html/page/launcher/launcher.css
@@ -15,7 +15,7 @@
     margin-left: 0.5%;
     margin-right: 0.5%;
     width: 99%;
-    height: 20%;
+    height: 8em;
 }
 
 #launcher #launcher\.labeldiv {
