Update battle.css, battle.html, and 2 more files...

--- a/public_html/page/launcher/battle/battle.css
+++ b/public_html/page/launcher/battle/battle.css
@@ -11,6 +11,7 @@
 
 #launcher\/battle #launcher\.battle\.battle_list {
     display: flex;
+    flex-flow: column;
     justify-content: center;
     text-align: center;
 }
